--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 		<section class="content-section">
 			<h1>文章</h1>
 			<div class="card">
-				<img class="article-img" alt="文章缩略图" src="">
+				<img class="article-img" alt="文章缩略图" src="https://www.mhwco.org/image/mhwco-logo/mhwco.svg"/>
+			</div>
 			
