--- a/index.html
+++ b/index.html
@@ -17,5 +17,11 @@
 			<h1>文章</h1>
 			<div class="card">
 				<img class="article-img" alt="文章缩略图" src="https://www.mhwco.org/image/mhwco-logo/mhwco.svg"/>
+				<h2 class="article-title">
+					测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试
+				</h2>
+				<div class="article-detail">
+					测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试
+				</div>
 			</div>
 			
