--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 		<section class="content-section">
 			<h1>文章</h1>
 			<div class="card">
+				<div class="title-bar">
+					<img class="avator" alt="作者头像" src="https://www.mhwco.org/image/mhwco-logo/mhwco-min.svg" align="center"/>
+					<span class="author">Root</span>
+					<span class="date">1970-1-1</span>
+				</div>
 				<img class="article-img" alt="文章缩略图" src="https://www.mhwco.org/image/mhwco-logo/mhwco.svg"/>
 				<h2 class="article-title">
 					测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试
