--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<h1>文章</h1>
 			<div class="card">
 				<div class="title-bar">
-					<img class="avator" alt="作者头像" src="https://www.mhwco.org/image/mhwco-logo/mhwco-min.svg" align="center"/>
+					<img class="avator" alt="作者头像" src="https://www.mhwco.org/image/mhwco-logo/mhwco-min.svg" align="middle"/>
 					<span class="author">Root</span>
 					<span class="date">1970-1-1</span>
 				</div>
