--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			<h1>文章</h1>
 			<div class="card">
 				<div class="title-bar">
-					<img class="avator" alt="作者头像" src="https://www.mhwco.org/image/mhwco-logo/mhwco-min.svg" align="middle"/>
-					<span class="author">Root</span>
+					<img class="avator" alt="作者头像" src="https://www.mhwco.org/image/mhwco-logo/mhwco-min.svg"/>
+					<span class="author">根用户</span>
 					<span class="date">1970-1-1</span>
 				</div>
 				<img class="article-img" alt="文章缩略图" src="https://www.mhwco.org/image/mhwco-logo/mhwco.svg"/>
