--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<section class="full-section" id="top">
 			
 		</section>
-		<section class="content-section">
+		<section class="content-section" id="content">
 			<h1>文章</h1>
 			<div class="card">
 				<div class="title-bar">
@@ -29,6 +29,7 @@
 					测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试
 				</div>
 			</div>
-		</body>
+		</section>
+	</body>
 </html>
 			
