--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"> 
 		<link rel="stylesheet" href="css/layout.css" type="text/css" />
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+		<script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 		<title>MHW合作组织</title>
 		<script src="js/jquery.js"></script>
 		<script src="js/main.js"></script>
 	</head>
 	<body>
 		<section class="full-section" id="top">
-			
+			<div>
+				<img class="slide-img" alt="我是一个轮播图" src="https://www.mhwco.org/image/mhwco-logo/mhwco.svg"/>
+			</div>
+			<div>
+				<img class="slide-img" alt="我是一个轮播图" src="https://www.mhwco.org/image/mhwco-logo/mhwco.svg"/>
+			</div>
 		</section>
 		<section class="content-section" id="content">
 			<h1>文章</h1>
@@ -21,7 +28,7 @@
 					<span class="author">根用户</span>
 					<span class="date">1970-1-1</span>
 				</div>
-				<img class="article-img" alt="文章缩略图" src="https://www.mhwco.org/image/mhwco-logo/mhwco.svg"/>
+				<img class="article-img" alt="我是文章缩略图" src="https://www.mhwco.org/image/mhwco-logo/mhwco.svg"/>
 				<h2 class="article-title">
 					测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试
 				</h2>
