--- a/index.html
+++ b/index.html
@@ -5,18 +5,24 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"> 
 		<link rel="stylesheet" href="css/layout.css" type="text/css" />
-		<!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-		<script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>-->
+		<link rel="stylesheet" href="slick/slick.css"/>
+		<link rel="stylesheet" href="slick/slick-theme.css"/>
 		<title>MHW合作组织</title>
 		<script src="js/jquery.js"></script>
+		<script src="slick/slick.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 		<script src="js/main.js"></script>
-		<script src="js/lunbotu.js"></script>
 	</head>
 	<body>
+		<script src="js/lunbotu.js"></script>
 		<section class="full-section" id="top">
 			<div class="zhiding">
 				<img class="slide-img" alt="我是一个轮播图" src="https://www.mhwco.org/image/mhwco-logo/mhwco.svg"/>
-				<div class="slide-title">测试测试测试测试</div>
+				<div class="slide-title">测试测试测试测试1</div>
+			</div>
+			<div class="zhiding">
+				<img class="slide-img" alt="我是一个轮播图" src="https://www.mhwco.org/image/mhwco-logo/mhwco-min.svg"/>
+				<div class="slide-title">测试测试测试测试2</div>
 			</div>
 		</section>
 		<section class="content-section" id="content">
