--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	</head>
 	<body>
 		<script src="js/lunbotu.js"></script>
+		<div id="t"></div>
 		<section class="full-section" id="top">
 			<div class="zhiding">
 				<img class="slide-img" alt="我是一个轮播图" src="https://www.mhwco.org/image/mhwco-logo/mhwco.svg"/>
