--- a/index.html
+++ b/index.html
@@ -2,25 +2,35 @@
 <!--南无阿弥陀佛 佛祖保佑无bug-->
 <html lang="zh-CN">
 	<head>
+		<!--以下是meta-->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"> 
+		<!--以上是meta-->
+		<!--以下是link-->
 		<link rel="stylesheet" href="css/layout.css" type="text/css" />
 		<link rel="stylesheet" href="slick/slick.css"/>
 		<link rel="stylesheet" href="slick/slick-theme.css"/>
+		<!--以上是link-->
 		<title>MHW合作组织</title>
+		<!--以下是外联script-->
 		<script src="js/jquery.js"></script>
 		<script src="slick/slick.min.js"></script>
 		<script src="js/main.js"></script>
+		<!--以上是外联script-->
 	</head>
 	<body>
+		<!--以下是外联script-->
 		<script src="js/lunbotu.js"></script>
-		<div id="t"></div>
+		<!--以上是外联script-->
+		<!--轮播图开始-->
 		<section class="full-section" id="top">
 			<div class="zhiding">
 				<img class="slide-img" alt="我是一个轮播图" src="https://www.mhwco.org/image/mhwco-logo/mhwco.svg"/>
 				<div class="slide-title">测试测试测试测试1</div>
 			</div>
 		</section>
+		<!--轮播图结束-->
+		<!--文章列表开始-->
 		<section class="content-section" id="content">
 			<h1>文章</h1>
 			<div class="card">
@@ -38,6 +48,7 @@
 				</div>
 			</div>
 		</section>
+		<!--文章列表结束-->
 	</body>
 </html>
 			
