--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<!--文章列表开始-->
 		<section class="content-section" id="content">
 			<h1>文章</h1>
-			<div class="card">
+			<!--<div class="card">
 				<div class="title-bar">
 					<img class="avator" alt="作者头像" src="https://www.mhwco.org/image/mhwco-logo/mhwco-min.svg"/>
 					<span class="author">根用户</span>
@@ -46,8 +46,11 @@
 				<div class="article-detail">
 					测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试
 				</div>
-			</div>
+			</div>-->
 		</section>
+		<div id="more">
+			查看更多
+		</div>
 		<!--文章列表结束-->
 	</body>
 </html>
