--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 		<!--以上是link-->
 		<title>MHW合作组织</title>
 		<!--以下是外联script-->
-		<script src="js/jquery.js"></script>
-		<script src="slick/slick.min.js"></script>
+		<script src="https://libs.mhwco.org/dlvr/jquery/jquery.js"></script>
+		<script src="https://libs.mhwco.org/dlvr/slick/slick.min.js"></script>
 		<script src="js/main.js"></script>
 		<!--以上是外联script-->
 	</head>
