--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 		<!--以上是meta-->
 		<!--以下是link-->
 		<link rel="stylesheet" href="css/layout.css" type="text/css" />
-		<link rel="stylesheet" href="slick/slick.css"/>
-		<link rel="stylesheet" href="slick/slick-theme.css"/>
+		<link rel="stylesheet" href="https://libs.mhwco.org/dlvr/slick/slick.css"/>
+		<link rel="stylesheet" href="https://libs.mhwco.org/dlvr/slick/slick-theme.css"/>
 		<!--以上是link-->
 		<title>MHW合作组织</title>
 		<!--以下是外联script-->
