--- a/test_highlight.html
+++ b/test_highlight.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+	<script>hljs.initHighlightingOnLoad();</script>
 	<pre><code class="java">
 		public class HighlightTest{
 			public static void main(String args[]){
